addons/kotsadm/0.9.9/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotsadm-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kotsadm-operator
  template:
    metadata:
      labels:
        app: kotsadm-operator
    spec:
      serviceAccountName: kotsadm-operator
      restartPolicy: Always
      containers:
      - image: kotsadm/kotsadm-operator:v0.9.9
        name: kotsadm-operator
