addons/kotsadm/0.9.9/schemahero.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kotsadm-migrations
spec:
  restartPolicy: OnFailure
  containers:
  - name: kotsadm-migrations
    image: kotsadm/kotsadm-migrations:v0.9.9
