addons/kotsadm/0.9.9/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotsadm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kotsadm-api
  template:
    metadata:
      labels:
        app: kotsadm-api
    spec:
      serviceAccountName: kotsadm-api
      containers:
      - image: kotsadm/kotsadm-api:v0.9.9
        name: kotsadm-api
        ports:
        - name: http
          containerPort: 3000
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: kotsadm-api
spec:
  type: ClusterIP
  selector:
    app: kotsadm-api
  ports:
  - name: http
    port: 3000
    targetPort: "http"
