addons/kotsadm/0.9.9/tmpl-web-node-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kotsadm-web
spec:
  selector:
    app: kotsadm-web
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: http
    nodePort: ${KOTSADM_UI_BIND_PORT}
